@@ -125,6 +125,8 @@
   thanks to garas - garas
 - bug #3123433 [interface] Avoid double escaping of MySQL errors.
 - [interface] Use less noisy message and remove disable link on server charts and database statistics.
++ rfe #3141330 [relation] When displaying results, show a link to the foreign 
+  table even when phpMyAdmin configuration storage is not active
 
 3.3.10.0 (not yet released)
 
